--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@joi/date": "^2.1.0",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "better-queue": "^3.8.10",
     "bluebird": "^3.7.2",
@@ -36,17 +38,20 @@
     "minimist": "^1.2.6",
     "moment": "^2.29.3",
     "multer": "^1.4.3",
+    "multiparty": "^4.2.3",
     "nocache": "^3.0.4",
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.18",
     "pg-promise": "^10.11.1",
     "pgtools": "^0.3.2",
     "pm2": "^5.2.0",
+    "promisify": "^0.0.3",
     "semver": "^7.3.7",
     "serialize-error": "8.1.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1",
     "xss-clean": "^0.1.1"
